# visual-slambook2-excercises

./: README.md
ch1/: ch1.md
ch10/: ch10.md
ch10/01_posegraph_se3/: CMakeLists.txt  pose_graph_g2o_SE3.cpp
ch10/02_posegraphy_lie_algebra/: CMakeLists.txt  pose_graph_g2o_lie_algebra.cpp
ch11/: ch11.md
ch11/01_vocab_training/: CMakeLists.txt  vocab_trainning.cpp
ch11/02_loop_closure/: CMakeLists.txt  loop_closure.cpp
ch12/: ch12.md
ch12/01_dense_monocular/: CMakeLists.txt  dense_mapping.cpp
ch13/: ch13.md
ch13/my_slam/: CMakeLists.txt
ch13/my_slam/app/: CMakeLists.txt
ch13/my_slam/config/: default.yaml
ch13/my_slam/include/myslam/: common_include.h  frame.h  frontend.h
ch13/my_slam/src/: CMakeLists.txt  viewer.cpp
ch2/: ch2.md
ch3/: ch3.md
ch3/01_useEigen/: CMakeLists.txt  run.sh  useeigen.cpp
ch3/02_useGeometry/: CMakeLists.txt  README.MD  useGeometry.cpp
ch3/03_plotTrajectory/: CMakeLists.txt  Kitti00_CameraTrajectory.txt  plotTrajectory.cpp
ch4/: ch4.md
ch4/01_useSophus/: CMakeLists.txt  useSophus.cpp
ch4/02_trajectoryError/: CMakeLists.txt  trajectoryError.cpp
ch5/: ch5.md
ch5/01_ImageBasics/: CMakeLists.txt  imagebasics.cpp
ch5/02_undistortImage/: CMakeLists.txt  undistortimage.cpp
ch5/03_stereoVision/: CMakeLists.txt  stereovision.cpp
ch5/04_jointMap/: CMakeLists.txt  joinMap.cpp
ch6/: ch6.md
ch6/01_gaussnewton/: CMakeLists.txt  gaussnewton.cpp
ch6/02_cerescurvefitting/: CMakeLists.txt  cerescurvefitting.cpp
ch6/03_g2ocurvefitting/: CMakeLists.txt  g2oCurveFitting.cpp
ch7/: ch7.md
ch7/01_orbfeatures/: CMakeLists.txt  main.cpp
ch7/01_orbfeatures/orb/: CMakeLists.txt  orb.cpp  orb.h
ch7/02_pose_estimation_2d2d/: CMakeLists.txt  pose_estimation_2d2d.cpp
ch7/03_triangulation/: CMakeLists.txt  triangulation.cpp
ch7/04_pose_estimation_3d2d/: CMakeLists.txt  pose_estimation_3d2d.cpp
ch7/05_pose_estimation_3d3d/: CMakeLists.txt  pose_estimation_3d3d.cpp
ch8/: ch8.md
ch8/01_opticalflowmultilevel/: CMakeLists.txt  opticalflowmultilevel.cpp
ch8/02_directmethodmultilevel/: CMakeLists.txt  direct_method.cpp
ch9/: ch9.md
ch9/01_ceresBA/: CMakeLists.txt  bundle_adjustment_ceres.cpp
ch9/02_g2oBA/: CMakeLists.txt  bundle_adjustment_g2o.cpp
